# purescript-native-build

./: .gitignore  CMakeLists.txt  Makefile  README.md  spago.dhall
src/: Main.purs
